# GraSphInv

./: .gitignore  CMakeLists.txt  Config.cmake  Graplot.yml  README.md  安装依赖.docx
Examples/Synthetic_test1/: README.txt  convert_ref.py  convert_test.py  dobs_T_phiphi  dobs_T_rphi  dobs_T_rtheta  dobs_T_thetaphi  dobs_T_thetatheta  dobs_exact_g_r
Examples/Synthetic_test1/Trr_inv/: Iteration_misfit_GN  ada_result.nc  ada_result.txt  ada_result.vtk  config_data  config_inversion  config_model  dpredicted_T_rr  info  info0  lambda_misfit_GN
Examples/Synthetic_test1/Trr_inv/plot/: inversion_model_Trr.eps  mycpt.cpt  plot_rho.sh  plot_rho_same_colorbar.sh  swap_2cols_of_Trr_data.py
Examples/Synthetic_test1/True_model/: True_model_perspective_view.pvsm  Vs_constraint.pvsm  mycpt.cpt  perspective_view_model_with_three_bodies.eps  plot_rho_true.sh  ref_model.pvsm  synthetic_test_ref_model.eps  test_model.nc  true_model.eps
Examples/Synthetic_test1/ggt_inv/: Iteration_misfit_GN  ada_result.nc  ada_result.txt  ada_result.vtk  combine5files.py  config_data  config_inversion  dobs_FTG  dobs_T_rr  dpredicted_T_rphi  dpredicted_T_rr  dpredicted_T_rtheta  dpredicted_T_thetaphi  dpredicted_T_thetatheta  info  lambda_misfit_GN  plot_misfit.py  sites  test_model.nc
Examples/Synthetic_test1/ggt_inv/plot/: get_mean_std.py  inverted_model_FTG.eps  mycpt.cpt  plot_data.sh  plot_rho.sh  plot_rho_same_colorbar.sh
Examples/Synthetic_test1/gr_inv/: README.txt
Examples/Synthetic_test1/gr_inv/Adap_Inver_wide_bounds/: Iteration_misfit_GN  ada_result.nc  ada_result.txt  ada_result.vtk  config_inversion  dpredicted_g_r  info  lambda_misfit_GN
Examples/Synthetic_test1/gr_inv/Adaptive_Inversion/: Iteration_misfit_GN  ada_result.txt  ada_result.vtk  config_inversion  info  lambda_misfit_GN  result_at_0.nc  result_at_1.nc  result_at_1.vtk  result_at_2.nc
Examples/Synthetic_test1/gr_inv/Adaptive_Inversion (copy)/: README.txt  config  config_inversion  dpredicted_g_r  info  initial_mesh.vtk  lambda_misfit.eps  lambda_misfit_GN  log  plot_misfit.py  result_at_0.vtk  result_at_2.vtk
Examples/Synthetic_test1/gr_inv/Adaptive_Inversion_crg/: Iteration_misfit_GN  README.txt  ada_result_crg.nc  ada_result_crg.txt  ada_result_crg.vtk  config_inversion  crg_model  dpredicted_g_r  info  lambda_misfit_GN  log  plot_misfit.py
Examples/Synthetic_test1/gr_inv/Adaptive_Inversion_pet/: Iteration_misfit_GN  ada_result_pet.nc  ada_result_pet.txt  ada_result_pet.vtk  log  (+4 more)
Examples/Test_ordering/: test_ordering_model.vtk  test_ordering_model_refined.vtk
Examples/Tibet50kmH_0_25x0_25/: README.txt
Examples/Tibet50kmH_0_25x0_25/LITHO1_0_data/: get_LITHO1_0_LAB.sh  readme.txt
Examples/Tibet50kmH_0_25x0_25/constraint_model/: README.md  README.txt  clip.sh  convert.py
Examples/Tibet50kmH_0_25x0_25/data/: Data_Description.md  EIGEN_EGM2.sh  organize_g_data.py
Examples/Tibet50kmH_0_25x0_25/gr_inv_constraint_wavelet/: Iteration_misfit_GN  config_inversion  config_model  dobs_g_r  dpredicted_g_r  gr_inv_pet.nc  info  lambda_misfit_GN  plot_misfit.py  ref_model.nc
Examples/Tibet50kmH_0_25x0_25/gr_inv_wihout_cst_wavelet/: Iteration_misfit_GN  config_data  config_inversion  dpredicted_g_r  gr_inv_no_constraint.nc  info  lambda_misfit_GN
Examples/Tibet50kmH_0_25x0_25/map/: Altyn_Tagh_Fault.gmt  Haiyuan_Fault.gmt  Sagaing_Fault.gmt  Tangra_Yum_Co_rift.gmt  annotations  map.sh  track.data  western_kunlun.gmt
py_src/: interpData.py
src/Geometry/: Cell.cpp  Cell.h  Face.cpp  Face.h  Mesh.cpp  Mesh.h  Observation.cpp  Observation.h  point.h  tesseroid.h
src/Inversion/: AdaptiveInversion.cpp  AdaptiveInversion.h  Crust1Correction.cpp  Crust1Correction.h  Crust1Correction2.cpp  Crust1Correction2.h  Fwd.cpp  Fwd.h  GN_Inversion_Wavelet.cpp  GN_Inversion_Wavelet.h  GN_Lcurve.cpp  GN_Lcurve.h  GaussNewtonInversion.cpp  GaussNewtonInversion.h  GravityField.cpp  GravityField.h  InversionBase.cpp  InversionBase.h  LinearInversion.cpp  LinearInversion.h  gauss.cpp  gauss.h  gs.h
src/programs/: ConvertTxt2Vtk.cpp  Extract_netcdf_slice.cpp  GraSphInv.cpp  RemoveCrustalEffect.cpp  Synthetic_data.cpp  Synthetic_data_ggt.cpp  Test_ordering.cpp  forward_test.cpp  test_wavelet_forward.cpp
(+258 files in other folders)
